--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "rxjs": "^6.2.1",
     "rxjs-compat": "^6.2.1",
     "text-mask-addons": "^3.8.0",
+    "web-animations-js": "^2.3.1",
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
