--- a/packages/form-app/form-app/package.json
+++ b/packages/form-app/form-app/package.json
@@ -11,11 +11,13 @@
   },
   "private": true,
   "dependencies": {
+    "@angular/animations": "^6.0.7",
     "@angular/common": "^6.0.3",
     "@angular/compiler": "^6.0.3",
     "@angular/core": "^6.0.3",
     "@angular/forms": "^6.0.3",
     "@angular/http": "^6.0.3",
+    "@angular/platform-browser": "^6.0.7",
     "@angular/platform-browser-dynamic": "^6.0.3",
     "@angular/router": "^6.0.3",
     "core-js": "^2.5.4",
