--- a/package.json
+++ b/package.json
@@ -39,15 +39,10 @@
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
-    "lerna": "^3.5.1",
-    "@angular/compiler-cli": "^6.0.7",
+    "@angular-devkit/build-angular": "^0.13.5",
     "@angular-devkit/build-ng-packagr": "~0.6.8",
-    "@angular-devkit/build-angular": "^0.8.3",
-    "ng-packagr": "^3.0.0-rc.2",
-    "tsickle": ">=0.25.5",
-    "tslib": "^1.7.1",
-    "typescript": "~2.7.2",
     "@angular/cli": "~6.0.7",
+    "@angular/compiler-cli": "^6.0.7",
     "@angular/language-service": "^6.0.7",
     "@types/jasmine": "~2.8.6",
     "@types/jasminewd2": "~2.0.3",
@@ -61,8 +56,13 @@
     "karma-coverage-istanbul-reporter": "~2.0.0",
     "karma-jasmine": "~1.1.1",
     "karma-jasmine-html-reporter": "^0.2.2",
+    "lerna": "^3.13.1",
+    "ng-packagr": "^3.0.0-rc.2",
     "protractor": "^5.4.1",
     "ts-node": "~5.0.1",
-    "tslint": "~5.9.1"
+    "tsickle": ">=0.25.5",
+    "tslib": "^1.7.1",
+    "tslint": "~5.9.1",
+    "typescript": "~2.7.2"
   }
 }
