--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,8 +18,18 @@
       "dom"
     ],
     "paths": {
-        "@formql/core": ["dist/formql"],
-        "@formql/editor": ["dist/editor"]
+      "@formql/core": [
+        "dist/formql"
+      ],
+      "@formql/editor": [
+        "dist/editor"
+      ],
+      "material": [
+        "dist/material"
+      ],
+      "material/*": [
+        "dist/material/*"
+      ]
     }
   }
 }
