--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "formql",
-  "verion": "0.2.5",
+  "verion": "0.2.7",
   "description": "The form framework to rule them all",
   "private": true,
   "scripts": {
@@ -14,23 +14,28 @@
     "npm_pack_library": "cd dist/formql && npm pack",
     "npm_prepare_library_formql_pack": "ng build formql --prod && cd dist/formql && npm pack",
     "npm_prepare_library_formql_editor_pack": "ng build formql-editor --prod && cd dist/formql-editor && npm pack",
+    "npm_prepare_library_formql_material_pack": "ng build formql-material --prod && cd dist/formql-material && npm pack",
     "npm_prepare_library_formql": "ng build formql --prod && cd dist/formql && npm publish",
     "npm_prepare_library_formql_editor": "ng build formql-editor --prod && cd dist/formql-editor && npm publish",
-    "package_all": "npm run npm_prepare_library_formql_pack && npm run npm_prepare_library_formql_editor_pack && npm install @formql/core && npm install @formql/editor",
-    "package_and_publish_all": "npm run npm_prepare_library_formql && npm run npm_prepare_library_formql_editor"
+    "npm_prepare_library_formql_material": "ng build formql-material --prod && cd dist/formql-material && npm publish",
+    "package_all": "npm run npm_prepare_library_formql_pack && npm run npm_prepare_library_formql_editor_pack && npm run npm_prepare_library_formql_material_pack && npm install @formql/core && npm install @formql/editor && npm install @formql/material",
+    "package_and_publish_all": "npm run npm_prepare_library_formql && npm run npm_prepare_library_formql_editor && npm run npm_prepare_library_formql_material"
   },
   "dependencies": {
     "@angular/animations": "^6.0.7",
+    "@angular/cdk": "^6.4.7",
     "@angular/common": "^6.0.7",
     "@angular/compiler": "^6.0.7",
     "@angular/core": "^6.0.7",
     "@angular/forms": "^6.0.7",
     "@angular/http": "^6.0.7",
+    "@angular/material": "^6.0.7",
     "@angular/platform-browser": "^6.0.7",
     "@angular/platform-browser-dynamic": "^6.0.7",
     "@angular/router": "^6.0.7",
-    "@formql/core": "file:dist/formql/formql-core-0.2.4.tgz",
-    "@formql/editor": "file:dist/formql-editor/formql-editor-0.2.4.tgz",
+    "@formql/core": "file:dist/formql/formql-core-0.2.7.tgz",
+    "@formql/editor": "file:dist/formql-editor/formql-editor-0.2.7.tgz",
+    "@formql/material": "file:dist/formql-material/formql-material-0.2.7.tgz",
     "angular2-text-mask": "^9.0.0",
     "angular2-uuid": "^1.1.1",
     "classlist.js": "^1.1.20150312",
@@ -42,10 +47,14 @@
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.13.5",
-    "@angular-devkit/build-ng-packagr": "~0.6.8",
-    "@angular/cli": "~6.0.7",
     "@angular/compiler-cli": "^6.0.7",
+    "@angular-devkit/build-ng-packagr": "~0.6.8",
+    "@angular-devkit/build-angular": "^0.13.5",
+    "ng-packagr": "^3.0.0-rc.2",
+    "tsickle": ">=0.25.5",
+    "tslib": "^1.7.1",
+    "typescript": "~2.7.2",
+    "@angular/cli": "~6.0.7",
     "@angular/language-service": "^6.0.7",
     "@types/jasmine": "~2.8.6",
     "@types/jasminewd2": "~2.0.3",
@@ -60,12 +69,8 @@
     "karma-jasmine": "~1.1.1",
     "karma-jasmine-html-reporter": "^0.2.2",
     "lerna": "^3.13.1",
-    "ng-packagr": "^3.0.0-rc.2",
     "protractor": "^5.4.1",
     "ts-node": "~5.0.1",
-    "tsickle": ">=0.25.5",
-    "tslib": "^1.7.1",
-    "tslint": "~5.9.1",
-    "typescript": "~2.7.2"
+    "tslint": "~5.9.1"
   }
 }
