--- a/package.json
+++ b/package.json
@@ -22,17 +22,17 @@
     "package_and_publish_all": "npm run npm_prepare_library_formql && npm run npm_prepare_library_formql_editor && npm run npm_prepare_library_formql_material"
   },
   "dependencies": {
-    "@angular/animations": "^6.0.7",
-    "@angular/cdk": "^6.4.7",
-    "@angular/common": "^6.0.7",
-    "@angular/compiler": "^6.0.7",
-    "@angular/core": "^6.0.7",
-    "@angular/forms": "^6.0.7",
-    "@angular/http": "^6.0.7",
-    "@angular/material": "^6.0.7",
-    "@angular/platform-browser": "^6.0.7",
-    "@angular/platform-browser-dynamic": "^6.0.7",
-    "@angular/router": "^6.0.7",
+    "@angular/animations": "~7.2.0",
+    "@angular/cdk": "~7.2.0",
+    "@angular/common": "~7.2.0",
+    "@angular/compiler": "~7.2.0",
+    "@angular/core": "~7.2.0",
+    "@angular/forms": "~7.2.0",
+    "@angular/http": "~7.2.0",
+    "@angular/material": "~7.2.0",
+    "@angular/platform-browser": "~7.2.0",
+    "@angular/platform-browser-dynamic": "~7.2.0",
+    "@angular/router": "~7.2.0",
     "@formql/core": "file:dist/formql/formql-core-0.3.0.tgz",
     "@formql/editor": "file:dist/formql-editor/formql-editor-0.3.0.tgz",
     "@formql/material": "file:dist/formql-material/formql-material-0.3.0.tgz",
@@ -40,37 +40,34 @@
     "angular2-uuid": "^1.1.1",
     "classlist.js": "^1.1.20150312",
     "core-js": "^2.5.4",
-    "rxjs": "^6.2.1",
-    "rxjs-compat": "^6.2.1",
+    "rxjs": "~6.3.3",
     "text-mask-addons": "^3.8.0",
     "web-animations-js": "^2.3.1",
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
-    "@angular/compiler-cli": "^6.0.7",
-    "@angular-devkit/build-ng-packagr": "~0.6.8",
-    "@angular-devkit/build-angular": "^0.13.5",
-    "ng-packagr": "^3.0.0-rc.2",
-    "tsickle": ">=0.25.5",
-    "tslib": "^1.7.1",
-    "typescript": "~2.7.2",
-    "@angular/cli": "~6.0.7",
-    "@angular/language-service": "^6.0.7",
-    "@types/jasmine": "~2.8.6",
+    "@angular/compiler-cli": "~7.2.0",
+    "@angular-devkit/build-ng-packagr": "~0.13.0",
+    "@angular-devkit/build-angular": "~0.13.0",
+    "ng-packagr": "~5.0.1",
+    "tsickle": "~0.34.3",
+    "typescript": "~3.2.2",
+    "@angular/cli": "~7.3.8",
+    "@angular/language-service": "~7.2.0",
+    "@types/jasmine": "~2.8.8",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "~8.9.4",
-    "codelyzer": "~4.2.1",
-    "hammerjs": "^2.0.8",
+    "codelyzer": "~4.5.0",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
-    "karma": "~1.7.1",
+    "karma": "~4.0.0",
     "karma-chrome-launcher": "~2.2.0",
-    "karma-coverage-istanbul-reporter": "~2.0.0",
-    "karma-jasmine": "~1.1.1",
+    "karma-coverage-istanbul-reporter": "~2.0.1",
+    "karma-jasmine": "~1.1.2",
     "karma-jasmine-html-reporter": "^0.2.2",
     "lerna": "^3.13.1",
-    "protractor": "^5.4.1",
-    "ts-node": "~5.0.1",
-    "tslint": "~5.9.1"
+    "protractor": "~5.4.0",
+    "ts-node": "~7.0.0",
+    "tslint": "~5.11.0"
   }
 }
