--- a/examples/01-starter-example/package.json
+++ b/examples/01-starter-example/package.json
@@ -1,6 +1,10 @@
 {
   "name": "starter-example",
-  "version": "0.0.0",
+  "version": "0.0.1",
+  "description": "FormQL - A framework for building dynamic forms",
+  "license": "MIT",
+  "author": "Juan Stoppa",
+  "homepage": "https://formql.io",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
