--- a/package.json
+++ b/package.json
@@ -1,8 +1,10 @@
 {
   "name": "formql",
-  "verion": "0.3.1",
-  "description": "The form framework to rule them all",
-  "private": true,
+  "version": "0.3.1",
+  "description": "FormQL - A framework for building dynamic forms",
+  "license": "MIT",
+  "author": "Juan Stoppa",
+  "homepage": "https://formql.io",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
@@ -33,9 +35,9 @@
     "@angular/platform-browser": "~7.2.0",
     "@angular/platform-browser-dynamic": "~7.2.0",
     "@angular/router": "~7.2.0",
-    "@formql/core": "file:dist/formql/formql-core-0.3.1.tgz",
-    "@formql/editor": "file:dist/formql-editor/formql-editor-0.3.1.tgz",
-    "@formql/material": "file:dist/formql-material/formql-material-0.3.1.tgz",
+    "@formql/core": "~0.3.1",
+    "@formql/editor": "~0.3.1",
+    "@formql/material": "~0.3.1",
     "angular2-text-mask": "^9.0.0",
     "angular2-uuid": "^1.1.1",
     "classlist.js": "^1.1.20150312",
