--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -25,7 +25,7 @@
     "bugs": {
         "url": "https://github.com/formql/formql/issues"
     },
-    "homepage": "https://github.com/formql/formql#readme",
+    "homepage": "https://formql.io",
     "keywords": [
         "formql",
         "angular",
