--- a/package.json
+++ b/package.json
@@ -43,9 +43,9 @@
     "text-mask-addons": "^3.8.0",
     "web-animations-js": "^2.3.1",
     "zone.js": "^0.8.26",
-    "@formql/core": "~0.3.2",
-    "@formql/editor": "~0.3.2",
-    "@formql/material": "~0.3.2"
+    "@formql/core": "file:dist/formql/formql-core-0.3.2.tgz",
+    "@formql/editor": "file:dist/formql-editor/formql-editor-0.3.2.tgz",
+    "@formql/material": "file:dist/formql-material/formql-material-0.3.2.tgz"
   },
   "devDependencies": {
     "@angular/compiler-cli": "~7.2.0",
