--- a/package.json
+++ b/package.json
@@ -35,9 +35,9 @@
     "@angular/platform-browser": "~7.2.0",
     "@angular/platform-browser-dynamic": "~7.2.0",
     "@angular/router": "~7.2.0",
-    "@formql/core": "file:dist/formql/formql-core-0.3.2.tgz",
-    "@formql/editor": "file:dist/formql-editor/formql-editor-0.3.2.tgz",
-    "@formql/material": "file:dist/formql-material/formql-material-0.3.2.tgz",
+    "@formql/core": "~0.3.3",
+    "@formql/editor": "~0.3.3",
+    "@formql/material": "~0.3.3",
     "angular2-text-mask": "^9.0.0",
     "angular2-uuid": "^1.1.1",
     "classlist.js": "^1.1.20150312",
