added new example: mortgage calculator

--- a/examples/02-mortgage-calculator/package.json
+++ b/examples/02-mortgage-calculator/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "starter-example",
+  "name": "mortgage-calculator",
   "version": "0.0.1",
   "description": "FormQL - A framework for building dynamic forms",
   "license": "MIT",
