--- a/examples/02-mortgage-calculator/package.json
+++ b/examples/02-mortgage-calculator/package.json
@@ -16,18 +16,23 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~7.2.0",
+    "@angular/cdk": "~7.2.0",
     "@angular/common": "~7.2.0",
     "@angular/compiler": "~7.2.0",
     "@angular/core": "~7.2.0",
     "@angular/forms": "~7.2.0",
     "@angular/platform-browser": "~7.2.0",
     "@angular/platform-browser-dynamic": "~7.2.0",
+    "@angular/material": "~7.2.0",
     "@angular/router": "~7.2.0",
     "@formql/core": "0.3.3",
     "@formql/editor": "0.3.3",
+    "@formql/material": "~0.3.3",
     "angular2-text-mask": "9.0.0",
     "angular2-uuid": "1.1.1",
     "text-mask-addons": "3.8.0",
+    "ng2-charts": "~2.2.3",
+    "chart.js": "~2.8.0",
     "core-js": "^2.5.4",
     "rxjs": "~6.3.3",
     "tslib": "^1.9.0",
