--- a/packages/editor/package.json
+++ b/packages/editor/package.json
@@ -13,6 +13,14 @@
         "test": "echo \"Error: no test specified\" && exit 1"
     },
     "peerDependencies": {
+        "@angular/common": "^7.2.0",
+        "@angular/compiler": "^7.2.0",
+        "@angular/core": "^7.2.0",
+        "@angular/forms": "^7.2.0",
+        "rxjs": "^6.3.3",
+        "angular2-text-mask": "^9.0.0",
+        "text-mask-addons": "^3.8.0",
+        "angular2-uuid": "^1.1.1",
         "@formql/core": "^0.3.4"
     },
     "bugs": {
