--- a/packages/form-app/form-app/src/tsconfig.spec.json
+++ b/packages/form-app/form-app/src/tsconfig.spec.json
@@ -4,14 +4,10 @@
     "outDir": "../out-tsc/spec",
     "module": "commonjs",
     "types": [
-      "jasmine",
+      "jest",
       "node"
     ]
   },
-  "files": [
-    "test.ts",
-    "polyfills.ts"
-  ],
   "include": [
     "**/*.spec.ts",
     "**/*.d.ts"
