--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,6 +9,7 @@
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
     "skipLibCheck": true,
+    "types": ["jest"],
     "target": "es5",
     "typeRoots": [
       "node_modules/@types"
