--- a/.travis.yml
+++ b/.travis.yml
@@ -1,1 +1,16 @@
 language: node_js
+node_js:
+  - "8"
+dist: trusty
+sudo: required
+
+branches:
+  only:
+  - master
+before_script:
+  - npm install -g @angular/cli
+install:
+  - npm run build
+script:
+  - npm test
+ 
