--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ node_js:
 branches:
   only:
   - master
-before_script:
+before_install:
   - npm install -g @angular/cli
   - npm install
 install:
