--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ branches:
   only:
   - master
 before_install:
-  - npm install -g @angular/cli
+  - npm install -g @angular/cli@7.3.8
 install:
   - npm run build
 script:
