--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
         "@types/jest": "^24.0.13",
         "@types/node": "~8.9.4",
         "codelyzer": "~4.5.0",
+        "cypress": "^3.3.1",
         "jasmine-core": "~2.99.1",
         "jasmine-spec-reporter": "~4.2.1",
         "jest": "^24.8.0",
