--- a/examples/02-mortgage-calculator/package.json
+++ b/examples/02-mortgage-calculator/package.json
@@ -7,7 +7,8 @@
   "homepage": "https://formql.io",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "ng serve --port=4202",
+    "start-prod": "ng serve --prod --port=4202",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
