--- a/packages/editor/package.json
+++ b/packages/editor/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@formql/editor",
-    "version": "0.3.7",
+    "version": "0.4.0",
     "description": "FormQL - A framework for building dynamic forms",
     "license": "MIT",
     "author": "Juan Stoppa",
@@ -21,7 +21,7 @@
         "angular2-text-mask": "^9.0.0",
         "text-mask-addons": "^3.8.0",
         "angular2-uuid": "^1.1.1",
-        "@formql/core": "^0.3.7"
+        "@formql/core": "0.4.0"
     },
     "bugs": {
         "url": "https://github.com/formql/formql/issues"
