--- a/packages/form-app/form-app/package.json
+++ b/packages/form-app/form-app/package.json
@@ -1,6 +1,6 @@
 {
     "name": "form-app",
-    "version": "0.3.7",
+    "version": "0.4.0",
     "description": "FormQL - A framework for building dynamic forms",
     "license": "MIT",
     "author": "Juan Stoppa",
@@ -29,8 +29,8 @@
         "core-js": "^2.5.4",
         "rxjs": "^6.0.0",
         "zone.js": "^0.8.26",
-        "@formql/core": "^0.3.7",
-        "@formql/editor": "^0.3.7"
+        "@formql/core": "0.4.0",
+        "@formql/editor": "0.4.0"
     },
     "devDependencies": {
         "@angular/compiler-cli": "~8.2.4",
