upgrade to angular 8

--- a/package.json
+++ b/package.json
@@ -43,9 +43,9 @@
         "@angular/platform-browser": "~8.2.4",
         "@angular/platform-browser-dynamic": "~8.2.4",
         "@angular/router": "~8.2.4",
-        "@formql/core": "file:dist/formql/formql-core-0.4.0.tgz",
-        "@formql/editor": "file:dist/formql-editor/formql-editor-0.4.0.tgz",
-        "@formql/material": "file:dist/formql-material/formql-material-0.4.0.tgz",
+        "@formql/core": "0.4.0",
+        "@formql/editor": "0.4.0",
+        "@formql/material": "0.4.0",
         "angular2-text-mask": "^9.0.0",
         "angular2-uuid": "^1.1.1",
         "classlist.js": "^1.1.20150312",
