more addition to the jest test

--- a/tsconfig.spec.json
+++ b/tsconfig.spec.json
@@ -6,7 +6,8 @@
     "target": "es5",
     "baseUrl": "",
     "types": ["jest", "node"],
-    "allowJs": true
+    "allowJs": true,
+    "emitDecoratorMetadata": true
   },
   "files": [
     "karmaTest.ts"
