--- a/angular.json
+++ b/angular.json
@@ -105,7 +105,7 @@
                 }
             }
         },
-        "formql": {
+        "core": {
             "root": "packages/core",
             "sourceRoot": "packages/core/src",
             "projectType": "library",
@@ -137,7 +137,7 @@
                 }
             }
         },
-        "formql-editor": {
+        "editor": {
             "root": "packages/editor",
             "sourceRoot": "packages/editor/src",
             "projectType": "library",
@@ -169,7 +169,7 @@
                 }
             }
         },
-        "formql-material": {
+        "material": {
             "root": "packages/material",
             "sourceRoot": "packages/material/src",
             "projectType": "library",
