--- a/package.json
+++ b/package.json
@@ -8,18 +8,18 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
+    "start-prod": "ng serve --prod",
     "build": "ng build",
     "test": "jest",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "npm_build_library": "ng build formql --prod",
-    "npm_pack_library": "cd dist/formql && npm pack",
-    "npm_prepare_library_formql_pack": "ng build formql --prod && cd dist/formql && npm pack",
-    "npm_prepare_library_formql_editor_pack": "ng build formql-editor --prod && cd dist/formql-editor && npm pack",
-    "npm_prepare_library_formql_material_pack": "ng build formql-material --prod && cd dist/formql-material && npm pack",
-    "npm_prepare_library_formql": "ng build formql --prod && cd dist/formql && npm publish",
-    "npm_prepare_library_formql_editor": "ng build formql-editor --prod && cd dist/formql-editor && npm publish",
-    "npm_prepare_library_formql_material": "ng build formql-material --prod && cd dist/formql-material && npm publish",
+    "npm_prepare_library_formql_pack": "rd /s /q .\\dist\\@formql\\core && ng build core --prod",
+    "npm_prepare_library_formql_editor_pack": "ng build editor --prod",
+    "npm_prepare_library_formql_material_pack": "ng build material --prod",
+    "npm_prepare_library_formql": "ng build core --prod && cd dist/core && npm publish",
+    "npm_prepare_library_formql_editor": "ng build editor --prod && cd dist/editor && npm publish",
+    "npm_prepare_library_formql_material": "ng build material --prod && cd dist/material && npm publish",
+    "npm_prepare_all_packages": "npm run npm_prepare_library_formql_pack && npm run npm_prepare_library_formql_editor_pack && npm run npm_prepare_library_formql_material_pack",
     "package_all": "npm run npm_prepare_library_formql_pack && npm run npm_prepare_library_formql_editor_pack && npm run npm_prepare_library_formql_material_pack && npm install @formql/core && npm install @formql/editor && npm install @formql/material",
     "package_and_publish_all": "npm run npm_prepare_library_formql && npm run npm_prepare_library_formql_editor && npm run npm_prepare_library_formql_material",
     "semantic-release": "semantic-release"
@@ -35,9 +35,6 @@
     "@angular/platform-browser": "~8.2.4",
     "@angular/platform-browser-dynamic": "~8.2.4",
     "@angular/router": "~8.2.4",
-    "@formql/core": "0.4.0",
-    "@formql/editor": "0.4.0",
-    "@formql/material": "0.4.0",
     "angular2-text-mask": "^9.0.0",
     "angular2-uuid": "^1.1.1",
     "classlist.js": "^1.1.20150312",
