--- a/packages/form-app/form-app/tsconfig.json
+++ b/packages/form-app/form-app/tsconfig.json
@@ -16,6 +16,11 @@
     "lib": [
       "es2017",
       "dom"
-    ]
+    ],
+    "paths": {
+      "@formql/*": [
+        "../../../dist/@formql/*"
+      ]
+    }
   }
 }
