--- a/package.json
+++ b/package.json
@@ -13,15 +13,14 @@
     "test": "jest",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "npm_prepare_library_formql_pack": "ng build core --prod",
-    "npm_prepare_library_formql_editor_pack": "ng build editor --prod",
-    "npm_prepare_library_formql_material_pack": "ng build material --prod",
-    "npm_prepare_library_formql": "ng build core --prod && cd dist/core && npm publish",
-    "npm_prepare_library_formql_editor": "ng build editor --prod && cd dist/editor && npm publish",
-    "npm_prepare_library_formql_material": "ng build material --prod && cd dist/material && npm publish",
-    "npm_prepare_all_packages": "npm run npm_prepare_library_formql_pack && npm run npm_prepare_library_formql_editor_pack && npm run npm_prepare_library_formql_material_pack",
-    "package_all": "npm run npm_prepare_library_formql_pack && npm run npm_prepare_library_formql_editor_pack && npm run npm_prepare_library_formql_material_pack && npm install @formql/core && npm install @formql/editor && npm install @formql/material",
-    "package_and_publish_all": "npm run npm_prepare_library_formql && npm run npm_prepare_library_formql_editor && npm run npm_prepare_library_formql_material",
+    "build_core": "ng build core --prod",
+    "build_editor": "ng build editor --prod",
+    "build_material": "ng build material --prod",
+    "build_all": "npm run build_core && npm run build_editor && npm run build_material",
+    "publish_core": "ng build core --prod && cd dist/core && npm publish",
+    "publish_editor": "ng build editor --prod && cd dist/editor && npm publish",
+    "publish_material": "ng build material --prod && cd dist/material && npm publish",
+    "publish_all": "npm run publish_core && npm run publish_editor && npm run publish_material",
     "semantic-release": "semantic-release"
   },
   "dependencies": {
@@ -61,7 +60,7 @@
     "lerna": "^3.13.1",
     "ng-packagr": "~5.0.1",
     "protractor": "~5.4.0",
-    "semantic-release": "^15.13.24",
+    "semantic-release": "^15.13.28",
     "ts-node": "~7.0.0",
     "tsickle": "~0.34.3",
     "tslint": "~5.11.0",
