--- a/tsconfig.spec.json
+++ b/tsconfig.spec.json
@@ -7,7 +7,7 @@
     "baseUrl": "",
     "types": ["jest", "node"],
     "allowJs": true,
-    "emitDecoratorMetadata": true
+    "emitDecoratorMetadata": false
   },
   "files": [
     "karmaTest.ts"
