--- a/examples/01-starter-example/tsconfig.json
+++ b/examples/01-starter-example/tsconfig.json
@@ -7,7 +7,7 @@
     "declaration": false,
     "module": "es2015",
     "moduleResolution": "node",
-    "emitDecoratorMetadata": true,
+    "emitDecoratorMetadata": false,
     "experimentalDecorators": true,
     "importHelpers": true,
     "target": "es5",
