--- a/package.json
+++ b/package.json
@@ -25,16 +25,16 @@
     "semantic-release": "semantic-release"
   },
   "dependencies": {
-    "@angular/animations": "~8.2.4",
-    "@angular/cdk": "~8.1.4",
-    "@angular/common": "~8.2.4",
-    "@angular/compiler": "~8.2.4",
-    "@angular/core": "~8.2.4",
-    "@angular/forms": "~8.2.4",
-    "@angular/material": "~8.1.4",
-    "@angular/platform-browser": "~8.2.4",
-    "@angular/platform-browser-dynamic": "~8.2.4",
-    "@angular/router": "~8.2.4",
+    "@angular/animations": "~9.1.1",
+    "@angular/cdk": "~9.2.0",
+    "@angular/common": "~9.1.1",
+    "@angular/compiler": "~9.1.1",
+    "@angular/core": "~9.1.1",
+    "@angular/forms": "~9.1.1",
+    "@angular/material": "~9.2.0",
+    "@angular/platform-browser": "~9.1.1",
+    "@angular/platform-browser-dynamic": "~9.1.1",
+    "@angular/router": "~9.1.1",
     "@formql/core": "0.4.0",
     "@formql/editor": "0.4.0",
     "@formql/material": "0.4.0",
@@ -42,33 +42,33 @@
     "angular2-uuid": "^1.1.1",
     "classlist.js": "^1.1.20150312",
     "core-js": "^2.5.4",
-    "rxjs": "~6.3.3",
+    "rxjs": "~6.5.5",
     "text-mask-addons": "^3.8.0",
-    "web-animations-js": "^2.3.1",
-    "zone.js": "^0.8.26"
+    "tslib": "^1.10.0",
+    "web-animations-js": "^2.3.2",
+    "zone.js": "~0.10.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.803.2",
-    "@angular-devkit/build-ng-packagr": "~0.803.2",
-    "@angular/cli": "~8.3.2",
-    "@angular/compiler-cli": "~8.2.4",
-    "@angular/language-service": "~8.2.4",
+    "@angular-devkit/build-angular": "~0.901.1",
+    "@angular-devkit/build-ng-packagr": "~0.901.1",
+    "@angular/cli": "~9.1.1",
+    "@angular/compiler-cli": "~9.1.1",
+    "@angular/language-service": "~9.1.1",
     "@types/jest": "^24.0.18",
-    "@types/node": "~8.9.4",
-    "codelyzer": "~4.5.0",
+    "@types/node": "^12.11.1",
+    "codelyzer": "^5.1.2",
     "cypress": "^3.4.1",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
     "jest": "^24.8.0",
     "jest-preset-angular": "^7.1.1",
     "lerna": "^3.13.1",
-    "ng-packagr": "~5.0.1",
+    "ng-packagr": "^9.0.0",
     "protractor": "~5.4.0",
     "semantic-release": "^15.13.24",
     "ts-node": "~7.0.0",
-    "tsickle": "~0.34.3",
     "tslint": "~5.11.0",
-    "typescript": "~3.4.5"
+    "typescript": "~3.8.3"
   },
   "repository": {
     "type": "git",
