--- a/packages/editor/package.json
+++ b/packages/editor/package.json
@@ -13,10 +13,10 @@
         "test": "echo \"Error: no test specified\" && exit 1"
     },
     "peerDependencies": {
-        "@angular/common": "^8.2.4",
-        "@angular/compiler": "^8.2.4",
-        "@angular/core": "^8.2.4",
-        "@angular/forms": "^8.2.4",
+        "@angular/common": "~9.1.1",
+        "@angular/compiler": "~9.1.1",
+        "@angular/core": "~9.1.1",
+        "@angular/forms": "~9.1.1",    
         "@formql/core": "0.4.0",
         "angular2-text-mask": "^9.0.0",
         "angular2-uuid": "^1.1.1",
