--- a/packages/material/package.json
+++ b/packages/material/package.json
@@ -13,17 +13,17 @@
         "test": "echo \"Error: no test specified\" && exit 1"
     },
     "peerDependencies": {
-        "@angular/cdk": "^8.1.4",
-        "@angular/common": "^8.2.4",
-        "@angular/compiler": "^8.2.4",
-        "@angular/core": "^8.2.4",
-        "@angular/forms": "^8.2.4",
-        "@angular/material": "^8.1.4",
-        "@angular/platform-browser": "^8.2.4",
+        "@angular/cdk": "~9.2.0",
+        "@angular/common": "~9.1.1",
+        "@angular/compiler": "~9.1.1",
+        "@angular/core": "~9.1.1",
+        "@angular/forms": "~9.1.1",
+        "@angular/material": "~9.2.0",
+        "@angular/platform-browser": "~9.1.1",    
         "@formql/core": "^0.4.0",
         "angular2-text-mask": "^9.0.0",
         "angular2-uuid": "^1.1.1",
-        "rxjs": "^6.3.3",
+        "rxjs": "~6.5.5",
         "text-mask-addons": "^3.8.0"
     },
     "bugs": {
