--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,20 +2,23 @@
   "compileOnSave": false,
   "compilerOptions": {
     "baseUrl": "./",
-    "outDir": "./dist/out-tsc",
+    "module": "esnext",
+    "outDir": "./dist",
     "sourceMap": true,
     "declaration": false,
     "moduleResolution": "node",
-    "emitDecoratorMetadata": true,
+    "emitDecoratorMetadata": false,
     "experimentalDecorators": true,
     "skipLibCheck": true,
-    "types": ["jest"],
-    "target": "es5",
+    "types": [
+      "jest"
+    ],
+    "target": "es2015",
     "typeRoots": [
       "node_modules/@types"
     ],
     "lib": [
-      "es2017",
+      "es2018",
       "dom"
     ],
     "paths": {
@@ -23,14 +26,26 @@
         "dist/formql"
       ],
       "@formql/editor": [
-        "dist/editor"
+        "dist/formql-editor"
       ],
-      "material": [
-        "dist/material"
+      "@formql/material": [
+        "dist/formql-material"
       ],
-      "material/*": [
-        "dist/material/*"
+      "@formql/material/*": [
+        "dist/formql-material/*"
       ]
     }
+  },
+  "angularCompilerOptions": {
+    "fullTemplateTypeCheck": true,
+    "strictInjectionParameters": true,
+    "enableIvy": false
   }
 }
+// "dist/formql"
+// "dist/formql-editor"
+// "dist/formql-material"
+// "dist/formql-material/*"
+// "packages/core/src/public_api.ts"
+// "packages/editor/src/public_api.ts"
+// "packages/material/src/public_api.ts"
