--- a/packages/core/tsconfig.lib.prod.json
+++ b/packages/core/tsconfig.lib.prod.json
@@ -14,13 +14,9 @@
     "types": [],
     "lib": [
       "dom",
-      "es2015"
-    ],
-    "paths": {
-      "@formql/core": [
-        "dist/@formql/core"
-      ]
-    }
+      "es2015",
+      "esnext.asynciterable"
+    ]
   },
   "angularCompilerOptions": {
     "annotateForClosureCompiler": true,
