--- a/apps/angular/app/package.json
+++ b/apps/angular/app/package.json
@@ -1,6 +1,6 @@
 {
     "name": "form-app",
-    "version": "0.4.0",
+    "version": "0.4.1",
     "description": "FormQL - A framework for building dynamic forms",
     "license": "MIT",
     "author": "Juan Stoppa",
@@ -28,9 +28,7 @@
         "@angular/router": "~8.2.4",
         "core-js": "^2.5.4",
         "rxjs": "^6.0.0",
-        "zone.js": "^0.8.26",
-        "@formql/core": "0.4.0",
-        "@formql/editor": "0.4.0"
+        "zone.js": "^0.8.26"
     },
     "devDependencies": {
         "@angular/compiler-cli": "~8.2.4",
