--- a/package.json
+++ b/package.json
@@ -24,43 +24,43 @@
     "semantic-release": "semantic-release"
   },
   "dependencies": {
-    "@angular/animations": "~8.2.4",
+    "@angular/animations": "^8.2.14",
     "@angular/cdk": "~8.1.4",
-    "@angular/common": "~8.2.4",
-    "@angular/compiler": "~8.2.4",
-    "@angular/core": "~8.2.4",
-    "@angular/forms": "~8.2.4",
+    "@angular/common": "^8.2.14",
+    "@angular/compiler": "^8.2.14",
+    "@angular/core": "^8.2.14",
+    "@angular/forms": "^8.2.14",
     "@angular/material": "~8.1.4",
-    "@angular/platform-browser": "~8.2.4",
-    "@angular/platform-browser-dynamic": "~8.2.4",
-    "@angular/router": "~8.2.4",
+    "@angular/platform-browser": "^8.2.14",
+    "@angular/platform-browser-dynamic": "^8.2.14",
+    "@angular/router": "^8.2.14",
     "angular2-text-mask": "^9.0.0",
     "angular2-uuid": "^1.1.1",
     "classlist.js": "^1.1.20150312",
-    "core-js": "^2.5.4",
+    "core-js": "^2.6.11",
     "rxjs": "~6.3.3",
     "text-mask-addons": "^3.8.0",
-    "web-animations-js": "^2.3.1",
-    "zone.js": "^0.8.26"
+    "web-animations-js": "^2.3.2",
+    "zone.js": "^0.8.29"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.803.2",
-    "@angular-devkit/build-ng-packagr": "~0.803.2",
-    "@angular/cli": "~8.3.2",
-    "@angular/compiler-cli": "~8.2.4",
-    "@angular/language-service": "~8.2.4",
-    "@types/jest": "^24.0.18",
+    "@angular-devkit/build-angular": "^0.803.26",
+    "@angular-devkit/build-ng-packagr": "^0.803.26",
+    "@angular/cli": "^8.3.26",
+    "@angular/compiler-cli": "^8.2.14",
+    "@angular/language-service": "^8.2.14",
+    "@types/jest": "^24.9.1",
     "@types/node": "~8.9.4",
     "codelyzer": "~4.5.0",
-    "cypress": "^3.4.1",
+    "cypress": "^4.3.0",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
-    "jest": "^24.8.0",
+    "jest": "^24.9.0",
     "jest-preset-angular": "^7.1.1",
-    "lerna": "^3.13.1",
+    "lerna": "^3.20.2",
     "ng-packagr": "~5.0.1",
-    "protractor": "~5.4.0",
-    "semantic-release": "^15.13.28",
+    "protractor": "^5.4.3",
+    "semantic-release": "^15.14.0",
     "ts-node": "~7.0.0",
     "tsickle": "~0.34.3",
     "tslint": "~5.11.0",
